fix: overflow list-item

--- a/src/scss/custom/_list.scss
+++ b/src/scss/custom/_list.scss
@@ -11,6 +11,7 @@
       align-items: center;
       text-decoration: none;
       border-bottom: 1px solid $list-border-color;
+      overflow-wrap: anywhere;
       .avatar,
       .it-rounded-icon,
       .it-thumb {
